Add images to posts tagged with Music

--- a/_posts/2007-07-10-flaminglips.html
+++ b/_posts/2007-07-10-flaminglips.html
@@ -10,7 +10,15 @@ tags:
 - The Flaming Lips
 - Brugge
 - Cactus Festival
+image:
+  path: /assets/images/social/the_flaming_lips_2007.jpg
 ---
+<figure>
+    <img src="/assets/images/posts/the_flaming_lips_2007.jpg" alt="" />
+    <figcaption>
+      <p class="figcaption">The Flaming Lips. <i><a href="https://en.wikipedia.org/wiki/The_Flaming_Lips">Wikipedia</a></i>.</p>
+    </figcaption>
+  </figure>
 <p><img src="/assets/images/2007/07/flaminglips.png" class="l" alt="The Flaming Lips" />Two Father Christmases, bright lights, giant balloons, large amounts of confetti, video projections and great music. <a href="http://en.wikipedia.org/wiki/Wayne_Coyne" title="Wayne Coyne">Wayne Coyne</a> and <a href="http://www.flaminglips.com" title="The Flaming Lips website">The Flaming Lips</a> delivered big time on this year's <a href="http://www.cactusfestival.be" title="Cactus Festival">Cactus Festival</a>.</p>
 <p>There's a lot to see and experience in <a href="http://www.brugge.be" title="Official website of Bruges">Brugge</a>, but this time all I cared about was the band. Wayne was hanging around on the stage before the gig, shooting confetti over the audience. I was quite close to the stage so I could clearly see -- and hear! -- their psychedelic show. I wish they would have played a bit longer though (they had to respect their time slot). Secondly, it would have been interesting to hear "extended" versions of some of their best songs -- but what we heard was brilliant too!</p>
 <p>Personal highlights were "Do You Realize??" from <a href="http://www.amazon.com/o/ASIN/B000068PQ0/" title="Yoshimi Battles the Pink Robots">Yoshimi Battles the Pink Robots</a> and "The Yeah Yeah Yeah Song" from <a href="http://www.amazon.com/o/ASIN/B000EGDNCW/" title="At War with the Mystics">At War with the Mystics</a>. The latter song included a long rant against <a href="http://www.rollingstone.com/news/coverstory/worst_president_in_history" title="The worst president in history">George Bush</a>, the worst president in history.</p>
