--- a/_posts/2007-07-17-brosella.html
+++ b/_posts/2007-07-17-brosella.html
@@ -9,8 +9,16 @@ categories:
 tags:
 - Brosella
 - improvising music
+image:
+  path: /assets/images/social/brosella.jpg
 ---
-<p><img src="/assets/images/2007/07/brosella.png" class="l" alt=""/><a href="http://www.brosella.be/" title="Brosella Folk &amp; Jazz">Brosella Folk &amp; Jazz</a> festival is one of the highlights of summer. This year, I missed the folk (so I thought) by going there on Sunday to check out some jazz. The evening turned out to be quite "folky".</p>
+<figure>
+    <img src="/assets/images/posts/brosella.jpg" alt="" />
+    <figcaption>
+      <p class="figcaption"><a href="https://brosellafestival.be/en/">Brosella Festival, Ossegempark, Brussels, Belgium</a>.</p>
+    </figcaption>
+  </figure>
+<p><a href="http://www.brosella.be/" title="Brosella Folk &amp; Jazz">Brosella Folk &amp; Jazz</a> festival is one of the highlights of summer. This year, I missed the folk (so I thought) by going there on Sunday to check out some jazz. The evening turned out to be quite "folky".</p>
 <p>After hearing the latter half of <a href="http://www.chrisjoris.be/" title="Chris Joris">Chris Joris</a>' gig, I went to see <a href="http://www.norcd.no/seglem/" title="Karl Seglem website">Karl Seglem</a>'s group. Karl is a Norwegian tenor saxophonist and composer who combines folk music traditions and world beat with jazz expression. I had never heard of him before Brosella festival, so I was curious to hear the gig. Norwegian groups are usually very good, and Seglem was no exception. The band understood how to use <em>space</em> in music, to make songs breathe naturally. Great concert.</p>
 <p><img src="/assets/images/2007/07/atomium.jpg" class="r" alt="Atomium by night" /></p>
 <p>Organisers had set up the smaller stage further down the hill. This was a big improvement as it allowed people to move more easily between the two stages and food/drink area. <a href="http://www.philipcatherine.com" title="Philip Catherine">Philip Catherine</a> was playing on main stage, but after Karl Seglem's concert I didn't have the energy to listen to his trio for more than 15 minutes. He plays anyway quite often in Brussels (I hope).</p>
