--- a/_posts/2007-12-03-a-musical-week-in-belgium.html
+++ b/_posts/2007-12-03-a-musical-week-in-belgium.html
@@ -17,6 +17,14 @@ tags:
 - Music
 - Brussels
 - culture
+image:
+  path: /assets/images/social/meshell_ndegeocello.jpg
 ---
+<figure>
+  <img src="/assets/images/posts/meshell_ndegeocello.jpg" alt="" />
+  <figcaption>
+    <p class="figcaption">Meshell Ndegeocello. <i><a href="https://en.wikipedia.org/wiki/Meshell_Ndegeocello">Wikipedia</a></i>.</p>
+  </figcaption>
+</figure>
 <p><img src="/assets/images/2007/12/cb.jpg" class="l" alt="Chemical Brother live in Antwerp, 2007" />During the last week or so, I&#8217;ve heard three good concerts here in Belgium: first <a title="The Chemical Brothers website" href="http://www.thechemicalbrothers.com/">The Chemical Brothers</a> in Antwerp, then <a title="Soundcheck at Myspace" href="http://www.myspace.com/sndcheck">SoundCheck</a> at <a title="Beursschouwburg website" href="http://www.beursschouwburg.be/">Beurskafee</a> in Brussels, and finally <a title="Meshell Ndegeocello at MySpace" href="http://www.myspace.com/officialmeshellndegeocello">Meshell</a> <a title="Meshell Ndegeocello fan club website" href="http://www.freemyheart.com/">Ndegeocello</a> in Leuven. Some weeks ago, <a title="ECM Records website" href="http://www.ecmrecords.com">Bobo Stenson Trio</a> played in St Truiden (too bad I missed that).</p>
 <p><img style="clear:left;" src="/assets/images/2007/12/meshell.jpg" class="l" alt="Meshell Ndegeocello live in Leuven, 2007" />Most of these concerts took place outside Brussels. Now, is that just a coincidence? Or is it a consequence of a lack of money, concert venues, or interest on the part of arts management people in Brussels? I don&#8217;t know, but I do think Belgium is a good country to live in, when it comes to cultural activities :-) </p>
