--- a/_posts/2008-07-16-paul-simon.html
+++ b/_posts/2008-07-16-paul-simon.html
@@ -9,7 +9,15 @@ categories:
 tags:
 - Music
 - Paul Simon
+image:
+  path: /assets/images/social/paul_simon.jpg
 ---
+<figure>
+    <img src="/assets/images/posts/paul_simon.jpg" alt="" />
+    <figcaption>
+      <p class="figcaption">Paul Simon. <i><a href="https://en.wikipedia.org/wiki/Paul_Simon">Wikipedia</a></i>.</p>
+    </figcaption>
+  </figure>
 <p>Two good concerts during the last couple of days: first <a href="http://www.mariaschneider.com/">Maria Schneider</a> playing at <a href="http://www.brosella.be/" title="Brosella Folk &amp; Jazz">Brosella Folk &amp; Jazz</a>, and then <a title="Paul Simon website" href="http://www.paulsimon.com/">Paul Simon</a> at <a title="Forest National website" href="http://www.forestnational.be">Forest National</a>. The former I've seen before in Finland many years ago, but the latter never. Paul Simon, glad you came to the cold, humid Brussels.</p>
 <p>There's only one thing I hate more than the "hockey arena sound": the sound of the bass drum in a hockey arena. I never considered Paul Simon as a hockey arena act, but that's what it sounded, unfortunately. Why mix Paul Simon like a rock band (in a hockey arena)? Anyway, I enjoyed it as much as I could, without hearing the nuances. That recognizable voice was there from the start.</p>
 <p>The setlist was a mixture of old and new songs, obviously. I remember when I saw U2 in Helsinki in 1997, many people reacted strongly to their '80s stuff, and when they played songs from the Pop album, the reaction was lame. A shame, because Pop is U2's best album by far. I don't like what they did in the '80s... Well, the same happened at Paul Simon's concert: all that Simon & Garfunkel and early Paul Simon stuff got the greatest applause. No problem there, I pretty much like everything Paul has done during his long career, but still, I miss the Gadd, Tee & Brecker years.</p>
