--- a/_posts/2008-11-13-mitch-mitchell.html
+++ b/_posts/2008-11-13-mitch-mitchell.html
@@ -4,5 +4,13 @@ date: '2008-11-13 18:24:33 +0100'
 date_gmt: '2008-11-13 16:24:33 +0100'
 categories:
 - Music
+image:
+  path: /assets/images/social/mitch_mitchell.jpg
 ---
+<figure>
+    <img src="/assets/images/posts/mitch_mitchell.png" alt="" />
+    <figcaption>
+      <p class="figcaption">Mitch Mitchell. <i><a href="https://en.wikipedia.org/wiki/Mitch_Mitchell">Wikipedia</a></i>.</p>
+    </figcaption>
+  </figure>
 <p>Mitch Mitchell, thanks for everything - R.I.P.! <a href="http://twitter.com/akikoo/statuses/1004300519" class="aktt_tweet_time">2008-11-13</a></p>
