--- a/_posts/2008-11-28-pekka-pohjola.html
+++ b/_posts/2008-11-28-pekka-pohjola.html
@@ -4,5 +4,13 @@ date: '2008-11-28 19:18:55 +0100'
 date_gmt: '2008-11-28 17:18:55 +0100'
 categories:
 - Music
+image:
+  path: /assets/images/social/pekka_pohjola.jpg
 ---
+<figure>
+    <img src="/assets/images/posts/pekka_pohjola.jpg" alt="" />
+    <figcaption>
+      <p class="figcaption">Pekka Pohjola. <i><a href="https://fi.wikipedia.org/w/index.php?curid=1770293">By Lehtikuva - STT</a></i>.</p>
+    </figcaption>
+  </figure>
 <p>One the greatest Finnish musicians and composers, Pekka Pohjola, has passed away. Thank you for the joy you brought to the world - R.I.P.!</p>
