--- a/_posts/2008-12-06-the-roots.html
+++ b/_posts/2008-12-06-the-roots.html
@@ -4,5 +4,13 @@ date: '2008-12-06 19:21:22 +0100'
 date_gmt: '2008-12-06 17:21:22 +0100'
 categories:
 - Music
+image:
+  path: /assets/images/social/the_roots_2008.jpg
 ---
+<figure>
+    <img src="/assets/images/posts/the_roots_2008.jpg" alt="" />
+    <figcaption>
+      <p class="figcaption">The Roots performing. <i><a href="https://en.wikipedia.org/wiki/The_Roots">Wikipedia</a></i>.</p>
+    </figcaption>
+  </figure>
 <p>Waiting for *The Roots* concert tomorrow!</p>
