--- a/_posts/2008-12-13-fleet-foxes.html
+++ b/_posts/2008-12-13-fleet-foxes.html
@@ -4,5 +4,13 @@ date: '2008-12-13 19:22:11 +0100'
 date_gmt: '2008-12-13 17:22:11 +0100'
 categories:
 - Music
+image:
+  path: /assets/images/social/fleet_foxes.jpg
 ---
+<figure>
+    <img src="/assets/images/posts/fleet_foxes.jpg" alt="" />
+    <figcaption>
+      <p class="figcaption">Fleet Foxes performing at Coachella in 2009. <i>By Fred von Lohmann - Flickr, <a href="https://commons.wikimedia.org/w/index.php?curid=59730619">Wikipedia</a></i>.</p>
+    </figcaption>
+  </figure>
 <p>Digging Fleet Foxes.</p>
