--- a/_posts/2009-06-27-the-king-of-pop.html
+++ b/_posts/2009-06-27-the-king-of-pop.html
@@ -7,5 +7,13 @@ date: '2009-06-27 18:35:34 +0200'
 date_gmt: '2009-06-27 16:35:34 +0200'
 categories:
 - Music
+image:
+  path: /assets/images/social/michael_jackson.jpg
 ---
+<figure>
+  <img src="/assets/images/posts/michael_jackson.jpg" alt="" />
+  <figcaption>
+    <p class="figcaption">Michael Jackson. <i><a href="https://en.wikipedia.org/wiki/Michael_Jackson">Wikipedia</a></i>.</p>
+  </figcaption>
+</figure>
 <p>A very well written tribute to the King of Pop: <a title="http://blog.allmusic.com/2009/6/26/in-tribute-michael-jackson/" href="http://tinyurl.com/rxwfsg" rel="nofollow">http://tinyurl.com/rxwfsg</a>. R.I.P. <a href="http://twitter.com/akikoo/statuses/2359046202" class="aktt_tweet_time">2009-06-27</a></p>
