--- a/_posts/2009-11-10-the-flaming-lips.html
+++ b/_posts/2009-11-10-the-flaming-lips.html
@@ -6,5 +6,13 @@ categories:
 - Music
 tags:
 - tweets
+image:
+  path: /assets/images/social/the_flaming_lips_2009.jpg
 ---
+<figure>
+    <img src="/assets/images/posts/the_flaming_lips_2009.jpg" alt="" />
+    <figcaption>
+      <p class="figcaption">The Flaming Lips. <i><a href="https://en.wikipedia.org/wiki/The_Flaming_Lips">Wikipedia</a></i>.</p>
+    </figcaption>
+  </figure>
 <p>Just saw The Flaming Lips for the second time in my life...nice show like always :) They played songs from their latest album Embryonic too.</p>
