--- a/_posts/2007-09-11-zawinul.html
+++ b/_posts/2007-09-11-zawinul.html
@@ -9,6 +9,14 @@ categories:
 tags:
 - Music
 - Weather Report
+image:
+  path: /assets/images/social/joe_zawinul.jpg
 ---
-<p>Joe <a href="http://www.zawinulmusic.com/" title="Joe Zawinul website">Zawinul</a>, one of the greatest musicians and composers of all time, has passed away in Vienna. I was lucky enough to see and hear him live in Paris in 2002 -- but I still regret I never experienced a live gig of the greatest group in the history of improvised music: <a href="http://en.wikipedia.org/wiki/Weather_Report" title="Weather Report (Wikipedia)">Weather Report</a>. (I was too young!)</p>
+<figure>
+  <img src="/assets/images/posts/joe_zawinul.jpg" alt="" />
+  <figcaption>
+    <p class="figcaption">Joe Zawinul. <i><a href="https://en.wikipedia.org/wiki/Joe_Zawinul">Wikipedia</a></i>.</p>
+  </figcaption>
+</figure>
+<p><a href="http://www.zawinulmusic.com/" title="Joe Zawinul website">Joe Zawinul</a>, one of the greatest musicians and composers of all time, has passed away in Vienna. I was lucky enough to see and hear him live in Paris in 2002 -- but I still regret I never experienced a live gig of the greatest group in the history of improvised music: <a href="http://en.wikipedia.org/wiki/Weather_Report" title="Weather Report (Wikipedia)">Weather Report</a>. (I was too young!)</p>
 <p>I've been listening to Weather Report half of my life. There is something in the music that never dies. Thank you Joe Zawinul for all the inspiration and joy you brought us. You will be remembered forever.</p>
