--- a/_posts/2007-10-10-radiohead.html
+++ b/_posts/2007-10-10-radiohead.html
@@ -9,7 +9,15 @@ tags:
 - Music
 - Radiohead
 - industry
+image:
+  path: /assets/images/social/radiohead.jpg
 ---
+<figure>
+    <img src="/assets/images/posts/radiohead.jpg" alt="" />
+    <figcaption>
+      <p class="figcaption">Radiohead. <i><a href="https://en.wikipedia.org/wiki/Radiohead">Wikipedia</a></i>.</p>
+    </figcaption>
+  </figure>
 <p>Radiohead's new album, In Rainbows, has become <a title="Download Radiohead album: In Rainbows" href="http://www.inrainbows.com/">available for download</a> from Radiohead website. It's up to you to decide how much you pay for it! Now, this is a brilliant idea which I hope will carry on to other people and change the way music business currently works.</p>
 <p>There seems to be some frustration in the air over music industry practices. More and more artists  use direct channels to reach their fans (remember Prince giving away copies of his latest album with a newspaper in the UK!). I think this is a good trend. It's all about going back to the roots: music is all about communication. The web is a good tool in bringing artists and fans closer. There is a lesson to be learned here for big record companies.</p>
 <p>This is a good day for music. Go <a title="Download Radiohead album: In Rainbows" href="http://www.inrainbows.com/">get the album</a> now and support the band!</p>
