--- a/_posts/2008-11-30-jan-hammer.html
+++ b/_posts/2008-11-30-jan-hammer.html
@@ -4,5 +4,13 @@ date: '2008-11-30 19:19:39 +0100'
 date_gmt: '2008-11-30 17:19:39 +0100'
 categories:
 - Music
+image:
+  path: /assets/images/social/jan_hammer.jpg
 ---
-<p>Listening to good old Jan Hammer...</p>
+<figure>
+    <img src="/assets/images/posts/jan_hammer.jpg" alt="" />
+    <figcaption>
+      <p class="figcaption">Jan Hammer in 1977. <i>By <a href="http://www.jimsummariaphoto.com">Jim Summaria</a> - <a href="https://commons.wikimedia.org/w/index.php?curid=5553175">Wikipedia</a></i>.</p>
+    </figcaption>
+  </figure>
+<p>Listening to good old Jan Hammer.</p>
