--- a/_posts/2010-05-18-ronnie-james-dio.html
+++ b/_posts/2010-05-18-ronnie-james-dio.html
@@ -11,5 +11,13 @@ categories:
 tags:
 - Ronnie James Dio
 - heavy music
+image:
+  path: /assets/images/social/ronnie_james_dio.jpg
 ---
+<figure>
+  <img src="/assets/images/posts/ronnie_james_dio.jpg" alt="" />
+  <figcaption>
+    <p class="figcaption">Ronnie James Dio. <i><a href="https://en.wikipedia.org/wiki/Ronnie_James_Dio">Wikipedia</a></i>.</p>
+  </figcaption>
+</figure>
 <p>On Sunday 16 May, 2010, <a href="http://en.wikipedia.org/wiki/Ronnie_James_Dio">Ronnie James Dio</a> passed away. Having grown up listening to heavy metal bands from the 70's and 80's, I just can't believe the man is gone. Rainbow -- one of the bands I listened to extensively -- was the main reason why I started playing drums in the 80's. Thank you for the music, Ronnie, and rest in peace!</p>
