Add new images to posts tagged with Traveling and Photography

--- a/_posts/2008-07-12-panasonic-lumix-dmc-fz18.html
+++ b/_posts/2008-07-12-panasonic-lumix-dmc-fz18.html
@@ -5,5 +5,13 @@ date_gmt: '2008-07-12 16:18:47 +0200'
 categories:
 - Traveling
 - Photography
+image:
+  path: /assets/images/social/panasonic_lumix_dmc_fz18.jpg
 ---
+<figure>
+  <img src="/assets/images/posts/panasonic_lumix_dmc_fz18.jpg" alt="" />
+  <figcaption>
+    <p class="figcaption">Panasonic Lumix DMC-FZ18, a superzoom bridge digital camera. <i><a href="https://www.dpreview.com/reviews/panasonicfz18">DP Review</a></i>.</p>
+  </figcaption>
+</figure>
 <p>Panasonic Lumix DMC-FZ18: what a fantastic camera! :-) <a href="http://twitter.com/akikoo/statuses/856635616" class="aktt_tweet_time">2008-07-12</a></p>
