--- a/_posts/2010-02-07-the-snowflake-man.html
+++ b/_posts/2010-02-07-the-snowflake-man.html
@@ -11,5 +11,13 @@ tags:
 - tweets
 - web
 - design
+image:
+  path: /assets/images/social/the_snowflake_man.jpg
 ---
+<figure>
+    <img src="/assets/images/posts/the_snowflake_man.jpg" alt="" />
+    <figcaption>
+      <p class="figcaption">Wilson Bentley, also known as Snowflake Bentley. <i><a href="https://en.wikipedia.org/wiki/Wilson_Bentley">Wikipedia</a></i>.</p>
+    </figcaption>
+  </figure>
 <p>"No one design was ever repeated. When a snowflake melted, that design was forever lost." The Snowflake Man: <a href="http://snowflakebentley.com/" rel="nofollow">http://snowflakebentley.com/</a></p>
