--- a/_posts/2011-03-20-st-anton-the-home-of-reckless-skiers.html
+++ b/_posts/2011-03-20-st-anton-the-home-of-reckless-skiers.html
@@ -7,6 +7,14 @@ categories:
 - General
 - Traveling
 - Photography
+image:
+  path: /assets/images/social/st_anton.jpg
 ---
+<figure>
+    <img src="/assets/images/posts/st_anton.jpg" alt="" />
+    <figcaption>
+      <p class="figcaption">St. Anton, Austria. <i>Photo by Aki Kärkkäinen</i>.</p>
+    </figcaption>
+  </figure>
 <p>I've posted some <a title="St. Anton photos in Flickr" href="https://www.flickr.com/photos/akikoo/sets/72157626306927668/">holiday photos from St. Anton</a> in the Austrian Alps. This was my first time in Austria, and I was curious to see the ski (and after-ski) culture, compared to that of Switzerland, or France where I usually go.</p>
 <p><a title="St. Anton photos in Flickr" href="https://www.flickr.com/photos/akikoo/sets/72157626306927668/"><img class="l" src="https://farm6.static.flickr.com/5098/5543057842_8a7d1e483b_m.jpg" alt="St. Anton, Austria"></a> Well, I can only say that don't even think of going there if you want to avoid the crowds. I've never seen so many people on the pistes, and most of them didn't seem to know even the basic rules of skiing. Pistes were very dangerous because of so many careless skiers. This year there was not much snow so I couldn't go so much off-piste. The village is nice but they really have to deal with the people problem. Before they do that, I'll just go somewhere else. </p>
