--- a/_posts/2011-09-17-my-photo-in-wtss-2012.html
+++ b/_posts/2011-09-17-my-photo-in-wtss-2012.html
@@ -10,5 +10,13 @@ categories:
 - Traveling
 - Books
 - Photography
+image:
+  path: /assets/images/social/wtss_2012_edition_book.png
 ---
+<figure>
+  <img src="/assets/images/posts/wtss_2012_edition_book.jpg" alt="" />
+  <figcaption>
+    <p class="figcaption">The 2012 edition of <strong>Where to Ski And Snowboard</strong>. One of my photos from St. Anton is used, with my permission, in this edition.</p>
+  </figcaption>
+</figure>
 <p><img src="/assets/images/2011/09/wtss2012.jpg" class="l" alt=""><a href="http://www.flickr.com/photos/akikoo/5542482445/in/set-72157626306927668/">One of my St. Anton photos</a> from 2011 was selected for the revised 2012 edition of <a href="http://www.wheretoskiandsnowboard.com/the-book/">Where to Ski And Snowboard</a>, the best-selling resort guidebook on the UK market. The book is very useful as a reference and also helps in finding new ski destinations that you might not have considered. <a href="http://www.wheretoskiandsnowboard.com/the-book/buy/">Buy the book</a>. Highly recommended. </p>
