--- a/_posts/2012-10-01-new-big-lebowski-book.html
+++ b/_posts/2012-10-01-new-big-lebowski-book.html
@@ -17,7 +17,14 @@ tags:
 - web
 - design
 - development
+image:
+  path: /assets/images/social/the_big_lebowski_book.png
 ---
-<p><img alt="" class="l" src="/assets/images/2012/10/lebowski.jpg"><br />
-In September 2012 <a href="http://www.voyageurpress.com/">Voyageur Press</a> published a new book, <a href="http://www.amazon.com/o/ASIN/0760342792/">The Big Lebowski: An Illustrated, Annotated History of the Greatest Cult Film of All Time</a>. I love the movie and I'm honored that they used one of my photographs of the <a href="http://www.flickr.com/photos/akikoo/2471192785/in/set-72157603409727497">Lebowski Bar in Berlin</a> (with my permission) in the book (p. 193).</p>
+<figure>
+  <img src="/assets/images/posts/the_big_lebowski_book.jpg" alt="" />
+  <figcaption>
+    <p class="figcaption"><strong>The Big Lebowski: An Illustrated, Annotated History of the Greatest Cult Film of All Time</strong>. My photo of the Lebowski Bar in Berlin is used, with my permission, in the book (p. 193). <i><a href="http://www.amazon.com/o/ASIN/0760342792/">Amazon</a></i>.</p>
+  </figcaption>
+</figure>
+<p>In September 2012 <a href="http://www.voyageurpress.com/">Voyageur Press</a> published a new book, <a href="http://www.amazon.com/o/ASIN/0760342792/">The Big Lebowski: An Illustrated, Annotated History of the Greatest Cult Film of All Time</a>. I love the movie and I'm honored that they used one of my photographs of the <a href="http://www.flickr.com/photos/akikoo/2471192785/in/set-72157603409727497">Lebowski Bar in Berlin</a> (with my permission) in the book (p. 193).</p>
 <p>It's an entertaining and informative book about a great movie that makes me laugh every single time I watch it, again and again. Mark it eight, Dude!</p>
