--- a/_posts/2007-05-18-berlin.html
+++ b/_posts/2007-05-18-berlin.html
@@ -10,7 +10,15 @@ categories:
 tags:
 - shopping
 - Berlin
+image:
+  path: /assets/images/social/berlin.jpg
 ---
+<figure>
+  <img src="/assets/images/posts/berlin.jpg" alt="" />
+  <figcaption>
+    <p class="figcaption">Glücklich am Park in Berlin (Mitte), Germany.</p>
+  </figcaption>
+</figure>
 <p>Before visiting Berlin for the first time in 2005, I didn't really know what to expect. Even if I had heard only positive stories about it, I thought it would be a tiring city full of ugly buildings and traffic noise (I don't really know where this impression came from; probably my ignorance). I'm so glad I was wrong - Berlin is such a nice and creative city.</p>
 <p><img src="/assets/images/2007/05/knut.png" alt="Knut in Berlin Zoo" class="l" />It's full of parks, cafes, clubs, bars, museums, galleries, media corporations, small boutiques, picturesque streets and sites of historic interest. This is the place where you can find the latest in music, art, architecture, and design. Berliners I met were extremely friendly and helpful. I only wish I could speak better German ;-).</p>
 <p>A couple of weeks ago I visited the city for the third time. I still can't stop admiring it, especially the Eastern part, where you can find nice boutiques and bars with relaxed atmosphere. The architecture in Berlin is fascinating too, with contemporary glass and steel structures - including interesting grid-type facades - with endless variations in shape, weight, symmetry and proportion. Visiting Berlin always makes me wonder why we don't have such excellence in modern architecture and city planning in Brussels too!</p>
