--- a/_posts/2007-11-11-goteborg.html
+++ b/_posts/2007-11-11-goteborg.html
@@ -15,7 +15,15 @@ tags:
 - Göteborg
 - Gothenburg
 - Sweden
+image:
+  path: /assets/images/social/gothenburg.jpg
 ---
+<figure>
+    <img src="/assets/images/posts/gothenburg.jpg" alt="" />
+    <figcaption>
+      <p class="figcaption">Göteborg (Gothenburg), Sweden. <i>Photo by Aki Kärkkäinen</i>.</p>
+    </figcaption>
+  </figure>
 <p>A few days ago, I came back from a trip to Sweden. After a couple of days in <a title="Helsingborg at Wikipedia" href="http://en.wikipedia.org/wiki/Helsingborg">Helsingborg</a> (a nice town with beautiful seafront!), I continued to <a title="Gothenburg official website" href="http://www.goteborg.com/">Gothenburg</a>. I still have a very special relation to that city; after all, it's the city where I lived in the nineties (as exchange student).</p>
 <p>Gothenburg is one of those places that always make you feel good; people are very friendly, funny and laid back. I had such good fun with many of my friends who are still living there.</p>
 <p><img class="r" src="/assets/images/2007/07/goteborg.png" alt="G&ouml;teborg, Sweden" />Gothenburg is full of talented musicians and personalities. I find the atmosphere there particularly positive and encouraging. It's a place that has made a lasting impression on me, so I try to visit the city whenever I can. In fact, every time I go there, it feels like I never left!</p>
