--- a/_posts/2008-11-12-geneva-smoking-ban.html
+++ b/_posts/2008-11-12-geneva-smoking-ban.html
@@ -5,5 +5,13 @@ date_gmt: '2008-11-12 16:22:20 +0100'
 categories:
 - General
 - Traveling
+image:
+  path: /assets/images/social/geneva.jpg
 ---
+<figure>
+    <img src="/assets/images/posts/geneva.jpg" alt="" />
+    <figcaption>
+      <p class="figcaption">Geneva. <i>Photo by Aki Kärkkäinen</i>.</p>
+    </figcaption>
+  </figure>
 <p>Just back from Geneva, where smoking ban was overturned earlier this autumn. Can't understand why. Smoking is SO old-fashioned. <a href="http://twitter.com/akikoo/statuses/1002634305" class="aktt_tweet_time">2008-11-12</a></p>
