--- a/_posts/2010-03-19-grimentz-zinal-switzerland.html
+++ b/_posts/2010-03-19-grimentz-zinal-switzerland.html
@@ -5,5 +5,13 @@ date_gmt: '2010-03-18 22:17:29 +0100'
 categories:
 - Traveling
 - Photography
+image:
+  path: /assets/images/social/zinal.jpg
 ---
+<figure>
+  <img src="/assets/images/posts/zinal.jpg" alt="" />
+  <figcaption>
+    <p class="figcaption">Zinal, Switzerland. <i>Photo by Aki Kärkkäinen</i>.</p>
+  </figcaption>
+</figure>
 <p>Just came back from skiing holiday in beautiful val d'Anniviers in Switzerland. Lots of sun and good skiing. Check out these photo sets from <a href="https://www.flickr.com/photos/akikoo/sets/72157623508828405/">Grimentz</a> and <a href="https://www.flickr.com/photos/akikoo/sets/72157623633622698/">Zinal</a>! </p>
