--- a/_posts/2010-08-18-sintra-sesimbra-photos.html
+++ b/_posts/2010-08-18-sintra-sesimbra-photos.html
@@ -15,5 +15,13 @@ tags:
 - web
 - design
 - development
+image:
+  path: /assets/images/social/sesimbra.jpg
 ---
+<figure>
+  <img src="/assets/images/posts/sesimbra.jpg" alt="" />
+  <figcaption>
+    <p class="figcaption">Sesimbra, Portugal. <i>Photo by Aki Kärkkäinen</i>.</p>
+  </figcaption>
+</figure>
 <p>Portugal holiday photos from #<a href="http://search.twitter.com/search?q=%23Sintra" class="aktt_hashtag">Sintra</a>  <a href="http://tinyurl.com/22ny7j4" rel="nofollow">http://tinyurl.com/22ny7j4</a> and #<a href="http://search.twitter.com/search?q=%23Sesimbra" class="aktt_hashtag">Sesimbra</a>  <a href="http://tinyurl.com/27ysnxt" rel="nofollow">http://tinyurl.com/27ysnxt</a> on Flickr.</p>
