Add images to posts tagged with Books

--- a/_posts/2007-06-22-favbooks1.html
+++ b/_posts/2007-06-22-favbooks1.html
@@ -10,7 +10,15 @@ categories:
 tags:
 - Books
 - inspiration
+image:
+  path: /assets/images/social/le_petit_prince_book.png
 ---
+<figure>
+  <img src="/assets/images/posts/le_petit_prince_book.jpg" alt="" />
+  <figcaption>
+    <p class="figcaption"><span lang="fr">Le Petit Prince</span>, by Antoine de Saint-Exupéry. <i><a href="http://www.amazon.com/o/ASIN/0156013983/">Amazon</a></i>.</p>
+  </figcaption>
+</figure>
 <p><img src="/assets/images/2007/06/books1/books.png" class="l" alt="Inspiring books" />Without these books -- or without having met the people who recommended some of them -- I wouldn't be the kind of person I am today. I'll start with some of my all-time favourite books that mean a lot to me personally.</p>
 <ul class="books">
 <li>
