--- a/_posts/2009-01-02-naomi-klein-the-shock-doctrine.html
+++ b/_posts/2009-01-02-naomi-klein-the-shock-doctrine.html
@@ -4,5 +4,14 @@ date: '2009-01-02 19:25:21 +0100'
 date_gmt: '2009-01-02 17:25:21 +0100'
 categories:
 - General
+- Books
+image:
+  path: /assets/images/social/the_shock_doctrine_book.jpg
 ---
+<figure>
+    <img src="/assets/images/posts/the_shock_doctrine_book.jpg" alt="" />
+    <figcaption>
+      <p class="figcaption"><a href="https://www.amazon.com/Shock-Doctrine-Rise-Disaster-Capitalism/dp/0312427999">The Shock Doctrine</a>, by Naomi Klein.</p>
+    </figcaption>
+  </figure>
 <p>Finished reading Naomi Klein's The Shock Doctrine: The Rise of Disaster Capitalism. War is economics === continuous growth for rich people.</p>
