--- a/_posts/2009-01-07-anna-politkovskaya-a-russian-diary.html
+++ b/_posts/2009-01-07-anna-politkovskaya-a-russian-diary.html
@@ -4,5 +4,14 @@ date: '2009-01-07 19:26:28 +0100'
 date_gmt: '2009-01-07 17:26:28 +0100'
 categories:
 - General
+- Books
+image:
+  path: /assets/images/social/a_russian_diary_book.jpg
 ---
+<figure>
+    <img src="/assets/images/posts/a_russian_diary_book.jpg" alt="" />
+    <figcaption>
+      <p class="figcaption">A Russian Diary, by Anna Politkovskaya. <i><a href="https://www.amazon.co.uk/Russian-Diary-Foreword-Jon-Snow/dp/0099523450/">Amazon</a></i>.</p>
+    </figcaption>
+  </figure>
 <p>Finished reading Anna Politkovskaya's book A Russian Diary, which should be called A USSR Diary instead. Recommended reading. R.I.P., Anna!</p>
