--- a/_posts/2010-05-04-html5-for-web-designers.html
+++ b/_posts/2010-05-04-html5-for-web-designers.html
@@ -7,10 +7,19 @@ date: '2010-05-04 19:28:08 +0200'
 date_gmt: '2010-05-04 17:28:08 +0200'
 categories:
 - Webdev
+- Books
 tags:
 - tweets
 - web
 - design
 - development
+image:
+  path: /assets/images/social/html5_for_web_designers_book.png
 ---
+<figure>
+  <img src="/assets/images/posts/html5_for_web_designers_book.jpg" alt="" />
+  <figcaption>
+    <p class="figcaption"><a href="https://abookapart.com/products/html5-for-web-designers">HTML5 For Web Designers</a>, by Jeremy Keith and Rachel Andrew.</p>
+  </figcaption>
+</figure>
 <p>HTML5 For Web Designers: <a href="http://tinyurl.com/23v2cp5" rel="nofollow">http://tinyurl.com/23v2cp5</a>. There's no mention about advanced JavaScript APIs, but I'm going to buy myself a copy!</p>
