--- a/_posts/2010-10-19-malarkey-new-book.html
+++ b/_posts/2010-10-19-malarkey-new-book.html
@@ -8,10 +8,19 @@ date: '2010-10-19 22:51:26 +0200'
 date_gmt: '2010-10-19 20:51:26 +0200'
 categories:
 - Webdev
+- Books
 tags:
 - tweets
 - web
 - design
 - development
+image:
+  path: /assets/images/social/hardboiled_web_design_book.png
 ---
+<figure>
+  <img src="/assets/images/posts/hardboiled_web_design_book.jpg" alt="" />
+  <figcaption>
+    <p class="figcaption"><a href="https://www.amazon.com/Hardboiled-Web-Design-Andy-Clarke/dp/1907828001">Hardboiled Web Design</a>, by Andy Clarke.</p>
+  </figcaption>
+</figure>
 <p>Just bought @<a href="http://twitter.com/Malarkey" class="aktt_username">Malarkey</a>'s new book @<a href="http://twitter.com/itshardboiled" class="aktt_username">itshardboiled</a> (<a href="http://hardboiledwebdesign.com" rel="nofollow">http://hardboiledwebdesign.com</a>). Get it now!</p>
