Add images to posts tagged with Brussels

--- a/_posts/2007-06-17-brussels.html
+++ b/_posts/2007-06-17-brussels.html
@@ -11,7 +11,15 @@ tags:
 - Belgium
 - Brussels
 - shopping
+image:
+  path: /assets/images/social/our_man_in_brussels.jpg
 ---
+<figure>
+  <img src="/assets/images/posts/our_man_in_brussels.jpg" alt="" />
+  <figcaption>
+    <p class="figcaption">Stockel metro station in Brussels by night. <i>Photo by Aki Kärkkäinen.</i></p>
+  </figcaption>
+</figure>
 <p><img src="/assets/images/2007/06/brussels.jpg" alt="Brussels" class="l" />I thought I'd share some personal observations and impressions about living in Brussels. But first, let me make myself clear that I'm only talking about the city and people of Brussels, not Belgium as a whole. I believe Brussels is like Paris in that it's like a small country within a country. It seems to be quite different than the rest of Belgium.</p>
 <p>When I say people in Brussels, I mean people living in Brussels. This includes both the local people and people coming from various countries.</p>
 <p>Brussels is like onion, full of surprises. Its beauty is not always apparent and visible, but if you find it, you'll be rewarded. Many people are actually surprised when I say I like Brussels a lot. I think these people are not curious enough, or they're just looking for something else.</p>
