--- a/_posts/2007-12-08-brussels-resto.html
+++ b/_posts/2007-12-08-brussels-resto.html
@@ -12,8 +12,16 @@ categories:
 tags:
 - Brussels
 - restaurants
+image:
+  path: /assets/images/social/brussels_restaurant_guide.jpg
 ---
-<p><img src="/assets/images/2007/12/resto.jpg" class="l" alt="Food!" />Lists are nice. I'm a big fan of "best of" lists as they help me keep things in one place for future reference. By viewing lists compiled by other people you can get new ideas and refine your own lists. It's fun and useful. This time, I've put together a list of restaurants in Brussels that I particularly like. This is not exactly a "best of" list. It's merely a collection of restaurants I've found to be good and not too expensive. In Brussels you can't have a bad meal even if you wanted to!</p>
+<figure>
+  <img src="/assets/images/posts/brussels_restaurant_guide.jpg" alt="" />
+  <figcaption>
+    <p class="figcaption">Best frites on Earth: <strong>Chez Martin</strong>, Place Saint-Josse (Brussels), Belgium. Martin retired in 2009. <i>Photo by Aki Kärkkäinen</i>.</p>
+  </figcaption>
+</figure>
+<p>Lists are nice. I'm a big fan of "best of" lists as they help me keep things in one place for future reference. By viewing lists compiled by other people you can get new ideas and refine your own lists. It's fun and useful. This time, I've put together a list of restaurants in Brussels that I particularly like. This is not exactly a "best of" list. It's merely a collection of restaurants I've found to be good and not too expensive. In Brussels you can't have a bad meal even if you wanted to!</p>
 <h3>Brussels restaurants by cuisine</h3>
 <h4>Belgian/French</h4>
 <ul>
