--- a/_posts/2008-09-21-car-free-sunday.html
+++ b/_posts/2008-09-21-car-free-sunday.html
@@ -11,8 +11,16 @@ categories:
 tags:
 - Brussels
 - cars
+image:
+  path: /assets/images/social/car_free_sunday.jpg
 ---
-<p><img class="l" src="/assets/images/2008/09/car-free.jpg" alt="" />Today, on a sunny Sunday, Brussels feels like a perfect place to be in. There are just a few cars around as only public transport, taxis and emergency vehicles are allowed to enter the city streets. Cyclists, skateboarders, rollerskaters, pedestrians, and even horse-drawn carriages take to the streets. I just wish it would be a bit like this tomorrow too; but I guess I'm asking for too much.</p>
+<figure>
+  <img src="/assets/images/posts/car_free_sunday.jpg" alt="" />
+  <figcaption>
+    <p class="figcaption">Brussels, Belgium, on a car-free, sunny day. <i>Photo by Aki Kärkkäinen</i>.</p>
+  </figcaption>
+</figure>
+<p>Today, on a sunny Sunday, Brussels feels like a perfect place to be in. There are just a few cars around as only public transport, taxis and emergency vehicles are allowed to enter the city streets. Cyclists, skateboarders, rollerskaters, pedestrians, and even horse-drawn carriages take to the streets. I just wish it would be a bit like this tomorrow too; but I guess I'm asking for too much.</p>
 <p>Now, it's not easy to arrange a car-free day in a city where driving is vigorously encouraged and where people <q>still take their car to get bread around the corner, even if the car is parked further away (<cite><a href="http://www.use-it.be">USE-IT</a></cite>)</q>.</p>
 <p>A car-free day is a good idea, so why not expand it? After seeing how much people enjoy this event every year, it's hard to comprehend why many people are so addicted to cars. It's a learned behaviour, of course. Organising a day like this is a good step, but it's not enough.</p>
 <p>Belgium is also a country where in 2008 people are still allowed to poison the air in bars with tobacco smoke. Sad but true. Maybe we should start having smokefree Sundays too, to see how wonderful it can be?</p>
