Add images to more posts

--- a/_posts/2008-01-06-newyear.html
+++ b/_posts/2008-01-06-newyear.html
@@ -11,7 +11,15 @@ categories:
 tags:
 - blogging
 - Webdev
+image:
+  path: /assets/images/social/new_year_new_job.jpg
 ---
+<figure>
+  <img src="/assets/images/posts/new_year_new_job.jpg" alt="" />
+  <figcaption>
+    <p class="figcaption">Photo by <a href="https://unsplash.com/@andknech">Andrew Knechel</a> on <a href="https://unsplash.com/photos/macro-view-of-lights-in-a-party-in-gettysburg-gG6yehL64fo">Unsplash</a>.</p>
+  </figcaption>
+</figure>
 <p>Happy New Year! To kick off 2008, I thought I'd write a few words about blogging (and social networking). I've got a new job too, but more on that later. First of all, I find it difficult to post here regularly. The problem is not that I don't have anything to say, but rather that I don't have time to do background research when preparing articles. It's not easy for me to "just start writing". Writing requires inspiration and practice. Writing takes time -- especially when you're not a native English speaker.</p>
 <p>Simon Collison wrote an excellent piece, <a href="http://www.colly.com/comments/two-years-on-heres-another-rant-about-the-state-of-blogging/">Two years on, here's another rant about the state of blogging</a>. A very refreshing read indeed. I might give <a href="http://twitter.com/akikoo">Twitter</a> or <a href="http://akikoo.tumblr.com">Tumblr</a> a try, even if I can't see myself using them extensively. But they might just be a solution to the time problem, while enhancing communication among colleagues and friends. I follow dozens of blogs every day (web design/development, news, upcoming concerts, tech stuff etc.) via <abbr title="Really Simple Syndication">RSS</abbr> feeds on <a href="http://www.google.com/reader">Google Reader</a>. This keeps me updated, makes me think and gives me new ideas. But if I want to react, contribute, and develop those ideas further, I often just don't have time or energy to do that (not on this website, that is). Nothing new here. Talking about information overload and time management. <a href="http://www.backpackit.com/">Backpack</a> is a good tool, but I also need to go out more often.</p>
 <p>To conclude this post, let me say that I've just started my new job as a Web Designer/Developer at a Belgian company. I'm happy to join them -- a good start for 2008!</p>
