--- a/_posts/2010-09-23-check-out-the-new-triplelbi-website.html
+++ b/_posts/2010-09-23-check-out-the-new-triplelbi-website.html
@@ -11,5 +11,13 @@ tags:
 - web
 - design
 - development
+image:
+  path: /assets/images/social/triple_lbi.jpg
 ---
+<figure>
+  <img src="/assets/images/posts/triple_lbi.jpg" alt="" />
+  <figcaption>
+    <p class="figcaption">Some of my colleagues at the Triple LBi.</p>
+  </figcaption>
+</figure>
 <p>Check out the new TRIPLE LBi website: <a href="http://www.triplelbi.com/" rel="nofollow">http://www.triplelbi.com/</a></p>
