--- a/_posts/2015-12-31-my-2015.html
+++ b/_posts/2015-12-31-my-2015.html
@@ -7,7 +7,15 @@ date_gmt: '2015-12-31 20:28:25 +0100'
 categories:
 - Webdev
 - Copenhagen
+image:
+  path: /assets/images/social/my_2015.jpg
 ---
+<figure>
+  <img src="/assets/images/posts/my_2015.jpg" alt="" />
+  <figcaption>
+    <p class="figcaption">My colleague's drawing of me in 2015.</p>
+  </figcaption>
+</figure>
 <p>I haven't written end of year accounts regularly but this time I thought I'd write one for 2015. Working as front-end developer involves lots of changes on a regular basis as the community keeps pushing the boundaries. It's been a busy year!</p>
 <h2>Work</h2>
 <p>Most of 2015, I worked in a small and highly skilled team at Podio/Citrix building Beagle, a tool for agencies for creating and reusing proposals. It was a good opportunity to learn about product design/development and work with a modern web stack, and establish a good architecture around it with React, Flux, ES6, BEM, node and webpack. I created a modular Style Guide for the product as well which really helped in maintaining a consistent UI.</p>
