--- a/_posts/2019-02-11-always-be-useful.html
+++ b/_posts/2019-02-11-always-be-useful.html
@@ -4,10 +4,15 @@ excerpt:
 date: '2019-02-11 17:42:23 +0100'
 categories:
 - Motivation
+image:
+  path: /assets/images/social/always_be_useful.jpg
 ---
-
-<p>I've spent a lot of time pursuing happiness and meaning in my life, but I've realized it's a moving target and that it happens in the moment. Happiness is not a goal in itself, but rather a by-product or side-effect of something else.
-  But what is that "something else" then?</p>
-<p>One way of seeing it is <strong>being useful</strong> and doing more things that have a positive
-  impact on other people, the environment and the nature. <a href="https://medium.com/darius-foroux/the-purpose-of-life-is-not-happiness-its-usefulness-65064d0cdd59">The Purpose Of Life Is Not Happiness: It’s Usefulness</a>
-  is an insightful article and one of the best I've read on the subject — and a good reminder not to overthink things. Do more!</p>
+<figure>
+  <img src="/assets/images/posts/always_be_useful.jpg" alt="" />
+  <figcaption>
+    <p class="figcaption">
+      Photo by <a href="https://unsplash.com/@mparzuchowski">Michał Parzuchowski</a> on <a href="https://unsplash.com/photos/boy-standing-inside-closed-room-BNvk1zqEAjc">Unsplash</a>.</p>
+  </figcaption>
+</figure>
+<p>I've spent a lot of time pursuing happiness and meaning in my life, but I've realized it's a moving target and that it happens in the moment. Happiness is not a goal in itself, but rather a by-product or side-effect of something else. But what is that "something else" then?</p>
+<p>One way of seeing it is <strong>being useful</strong> and doing more things that have a positive impact on other people, the environment and the nature. <a href="https://medium.com/darius-foroux/the-purpose-of-life-is-not-happiness-its-usefulness-65064d0cdd59">The Purpose Of Life Is Not Happiness: It’s Usefulness</a> is an insightful article and one of the best I've read on the subject — and a good reminder not to overthink things. Do more!</p>
