--- a/_posts/2019-02-14-facts-beliefs-and-change.html
+++ b/_posts/2019-02-14-facts-beliefs-and-change.html
@@ -4,8 +4,15 @@ excerpt: Why Facts Don't Change Our Minds
 date: '2019-02-14 18:44:32 +0100'
 categories:
 - Motivation
+image:
+  path: /assets/images/social/facts_beliefs_and_change.jpg
 ---
-
+<figure>
+  <img src="/assets/images/posts/facts_beliefs_and_change.jpg" alt="" />
+  <figcaption>
+    <p class="figcaption"><i>Photo by <a href="https://unsplash.com/@toxilicity">Aleesha Wood</a> on <a href="https://unsplash.com/photos/body-of-water-beside-tree-near-mountain-sM1jrEllC3U">Unsplash</a>.</i></p>
+  </figcaption>
+</figure>
 <p>The fact is that we can't change other people, only ourselves.
   But in the "post-truth" era, it's hard to distinguish facts from fiction.
   And when bad ideas are repeated, people start believing in them.
