--- a/_posts/2019-02-20-building-creative-habits.html
+++ b/_posts/2019-02-20-building-creative-habits.html
@@ -4,8 +4,15 @@ excerpt: Solid advice on building creative habits.
 date: '2019-02-20 20:10:12 +0100'
 categories:
 - Motivation
+image:
+  path: /assets/images/social/building_creative_habits.jpg
 ---
-
+<figure>
+  <img src="/assets/images/posts/building_creative_habits.jpg" alt="" />
+  <figcaption>
+    <p class="figcaption"><i>Photo by <a href="https://unsplash.com/@giorgiotrovato">Giorgio Trovato</a> on <a href="https://unsplash.com/photos/a-bunch-of-different-colored-papers-on-top-of-each-other-8gILtWB6o8c">Unsplash</a>.</i></p>
+  </figcaption>
+</figure>
 <p>
   Creative side projects are an important source of positive energy.
   <a href="https://thecreativeindependent.com/guides/how-to-balance-full-time-work-with-creative-projects/">How to balance full-time work with creative projects</a>
