--- a/_posts/2019-02-26-leadership-as-individual-contributor.html
+++ b/_posts/2019-02-26-leadership-as-individual-contributor.html
@@ -4,8 +4,15 @@ excerpt: Leadership comes in many forms, no matter the job title.
 date: '2019-02-26 17:22:41 +0100'
 categories:
 - Motivation
+image:
+  path: /assets/images/social/leadership_as_an_individual_contributor.jpg
 ---
-
+<figure>
+  <img src="/assets/images/posts/leadership_as_an_individual_contributor.jpg" alt="" />
+  <figcaption>
+    <p class="figcaption"><i>Photo by <a href="https://unsplash.com/@sandym10">Sandy Millar</a> on <a href="https://unsplash.com/photos/monarch-butterfly-perched-on-purple-flower-in-close-up-photography-during-daytime-pNGJpcrbfM4">Unsplash</a></i>.</p>
+  </figcaption>
+</figure>
 <p>Leadership comes in many forms, no matter the formal job title.
 <a href="https://www.tombartel.me/blog/exhibit-leadership-as-individual-contributor/">How to Exhibit Leadership as an Individual Contributor</a>
   contains some very good advice on the various ways of showing leadership behaviour.
