--- a/_posts/2019-03-19-building-trust-as-a-leader.html
+++ b/_posts/2019-03-19-building-trust-as-a-leader.html
@@ -5,8 +5,15 @@ date: '2019-03-19 19:21:07 +0100'
 categories:
 - Motivation
 - Teams
+image:
+  path: /assets/images/social/building_trust_as_a_leader.jpg
 ---
-
+<figure>
+  <img src="/assets/images/posts/building_trust_as_a_leader.jpg" alt="" />
+  <figcaption>
+    <p class="figcaption"><i>Photo by <a href="https://unsplash.com/@zmachacek">Zdeněk Macháček</a> on <a href="https://unsplash.com/photos/pile-of-stones-VN1YlrnHcq8">Unsplash</a>.</i></p>
+  </figcaption>
+</figure>
 <p>This Signal v. Noise post, <a href="https://m.signalvnoise.com/the-3-most-effective-ways-to-build-trust-as-a-leader/">the 3 most effective ways to build trust as a leader</a>,
   summarizes the findings from their recent survey.</p>
 <p>The results show that building trust is mostly about making it clear why you're doing something,
